--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twitter2.0",
+  "name": "zakat",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.3.0",
     "@heroicons/vue": "^1.0.1",
+    "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -21,11 +23,13 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "apexcharts": "^3.28.3",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "vue3-apexcharts": "^1.4.1"
   }
 }
