chore: some updates

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_BASEURL_ENDPOINT=
-VUE_APP_ZAKAT_ENDPOINT=
+VUE_APP_BASEURL_ENDPOINT=http://localhost:8000/
+VUE_APP_ZAKAT_ENDPOINT=http://localhost:8000/api/zakat/
